--- a/web/package.json
+++ b/web/package.json
@@ -3,17 +3,9 @@
   "version": "10.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "./node_modules/.bin/http-server public -p 3000"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.13.1",
-    "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0", 
-    "cheerio": "*", 
-    "request": "*"
+    "http-server": "^0.9.0"
   }
 }
