--- a/.concourse/personal_website-pipeline.yml
+++ b/.concourse/personal_website-pipeline.yml
@@ -1,58 +1,16 @@
 jobs:
-- name: web-publish
+- name: web-job
   public: true
   serial: true
   plan:
   - get: resource-personal_website
-    trigger: true
-  - put: web-docker-image
-    params:
-      build: resource-personal_website/web
-- name: jupyter-publish
-  public: true
-  serial: true
-  plan:
-  - get: resource-personal_website
-    trigger: true
-  - put: jupyter-docker-image
-    params:
-      build: resource-personal_website/jupyter
-- name: maps-publish
-  public: true
-  serial: true
-  plan:
-  - get: resource-personal_website
-    trigger: true
-  - put: maps-docker-image
-    params:
-      build: resource-personal_website/maps
+  - task: build-web-container
+    file: .concourse/tasks/build-web-container.yml
+  - task: load-web-container
+    file: .concourse/tasks/load-web-container.yml
 
 resources:
 - name: resource-personal_website
   type: git
   source:
     uri: https://github.com/G2Jose/personal_website.git
-
-- name: web-docker-image
-  type: docker-image
-  source:
-    email: {{docker-hub-email}}
-    username: {{docker-hub-username}}
-    password: {{docker-hub-password}}
-    repository: {{docker-hub-image-web}}
-
-- name: jupyter-docker-image
-  type: docker-image
-  source:
-    email: {{docker-hub-email}}
-    username: {{docker-hub-username}}
-    password: {{docker-hub-password}}
-    repository: {{docker-hub-image-jupyter}}
-
-- name: maps-docker-image
-  type: docker-image
-  source:
-    email: {{docker-hub-email}}
-    username: {{docker-hub-username}}
-    password: {{docker-hub-password}}
-    repository: {{docker-hub-image-jupyter}}
