--- a/.concourse/tasks/build-web-container.yml
+++ b/.concourse/tasks/build-web-container.yml
@@ -13,4 +13,4 @@ outputs:
 
 run:
   # path: /bin/sh resource-personal_website/.concourse/tasks/build-web-container.sh
-  path: ls resource-personal_website/
+  path: ls
