--- a/.concourse/tasks/build-web-container.yml
+++ b/.concourse/tasks/build-web-container.yml
@@ -12,6 +12,6 @@ outputs:
 - name: web-docker-image
 
 run:
-  # path: /bin/sh resource-personal_website/.concourse/tasks/build-web-container.sh
+  # path: ./resource-personal_website/.concourse/tasks/build-web-container.sh
   path: ls
-  args: [-lap]
+  args: [-lap ./resource-personal_website/.concourse/tasks/]
