--- a/.concourse/tasks/build-web-container.yml
+++ b/.concourse/tasks/build-web-container.yml
@@ -14,4 +14,4 @@ outputs:
 run:
   # path: ./resource-personal_website/.concourse/tasks/build-web-container.sh
   path: ls
-  args: [-lap ./resource-personal_website/.concourse/tasks/]
+  args: ['-lap', './resource-personal_website/.concourse/tasks/']
