--- a/.concourse/tasks/build-web-container.yml
+++ b/.concourse/tasks/build-web-container.yml
@@ -3,7 +3,7 @@ platform: linux
 
 image_resource:
   type: docker-image
-  source: {repository: docker}
+  source: {repository: docker, privileged: true}
 
 inputs:
 - name: resource-personal_website
