--- a/.concourse/tasks/load-web-container.yml
+++ b/.concourse/tasks/load-web-container.yml
@@ -3,7 +3,7 @@ platform: linux
 
 image_resource:
   type: docker-image
-  source: {repository: docker}
+  source: {repository: docker:dind}
 
 inputs:
 - name: web-docker-image
