--- a/.concourse/personal_website-pipeline.yml
+++ b/.concourse/personal_website-pipeline.yml
@@ -1,5 +1,5 @@
 jobs:
-- name: web-job
+- name: build-web
   public: true
   serial: true
   plan:
@@ -7,7 +7,14 @@ jobs:
   - task: build-web-container
     file: resource-personal_website/.concourse/tasks/build-web-container.yml
     privileged: true
+- name: load-web
+  public: true
+  serial: true
+  plan:
+  - get: resource-personal_website
   - task: load-web-container
+    passed: [build-web]
+    trigger: true
     file: resource-personal_website/.concourse/tasks/load-web-container.yml
     privileged: true
 
