--- a/.concourse/personal_website-pipeline.yml
+++ b/.concourse/personal_website-pipeline.yml
@@ -3,23 +3,23 @@ jobs:
   public: true
   serial: true
   plan:
-  - get: resource-personal_website
+  - get: resource-personal-website
   - task: build-web-container
-    file: resource-personal_website/.concourse/tasks/build-web-container.yml
+    file: resource-personal-website/.concourse/tasks/build-web-container.yml
     privileged: true
-- name: load-web
-  public: true
-  serial: true
-  plan:
-  - get: resource-personal_website
-  - task: load-web-container
-    passed: [build-web]
-    trigger: true
-    file: resource-personal_website/.concourse/tasks/load-web-container.yml
-    privileged: true
+# - name: load-web
+#   public: true
+#   serial: true
+#   plan:
+#   - get: resource-personal-website
+#   - task: load-web-container
+#     passed: [build-web]
+#     trigger: true
+#     file: resource-personal-website/.concourse/tasks/load-web-container.yml
+#     privileged: true
 
 resources:
-- name: resource-personal_website
+- name: resource-personal-website
   type: git
   source:
-    uri: https://github.com/G2Jose/personal_website.git
+    uri: https://github.com/G2Jose/personal-website.git
