--- a/.concourse/personal_website-pipeline.yml
+++ b/.concourse/personal_website-pipeline.yml
@@ -6,6 +6,7 @@ jobs:
   - get: resource-personal-website
   - task: build-web-container
     file: resource-personal-website/.concourse/tasks/build-web-container.yml
+    trigger: true
     privileged: true
 # - name: load-web
 #   public: true
@@ -23,3 +24,4 @@ resources:
   type: git
   source:
     uri: https://github.com/G2Jose/personal-website.git
+    branch: concourse
