--- a/.concourse/personal_website-pipeline.yml
+++ b/.concourse/personal_website-pipeline.yml
@@ -8,6 +8,11 @@ jobs:
   - task: build-web-container
     file: resource-personal-website/.concourse/tasks/build-web-container.yml
     privileged: true
+    params:
+      DOCKER_HUB_EMAIL: {{docker-hub-email}}
+      DOCKER_HUB_USERNAME: {{docker-hub-username}}
+      DOCKER_HUB_PASSWORD: {{docker-hub-password}}
+      DOCKER_HUB_IMAGE: {{docker-hub-image-web}}
 # - name: load-web
 #   public: true
 #   serial: true
