--- a/.concourse/tasks/build-web-container.yml
+++ b/.concourse/tasks/build-web-container.yml
@@ -15,7 +15,7 @@ run:
   path: ./resource-personal-website/.concourse/tasks/build-web-container.sh
 
 params:
-  DOCKER_HUB_EMAIL:
+  # DOCKER_HUB_EMAIL:
   DOCKER_HUB_USERNAME:
   DOCKER_HUB_PASSWORD:
   DOCKER_HUB_IMAGE:
