--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "10.0.0",
   "private": true,
   "scripts": {
-    "start": "./node_modules/.bin/http-server public -p 3000"
+    "start": "./node_modules/.bin/http-server public -p 3000",
+    "test": "exit 0"
   },
   "dependencies": {
     "http-server": "^0.9.0"
