--- a/.concourse/personal-website-pipeline.yml
+++ b/.concourse/personal-website-pipeline.yml
@@ -75,7 +75,7 @@ jobs:
       DOCKER_HUB_USERNAME: {{docker-hub-username}}
       DOCKER_HUB_PASSWORD: {{docker-hub-password}}
       DOCKER_HUB_DEPLOY_TAG: georgejose/web:latest
-      SSH_HOST: george@138.197.146.211
+      SSH_HOST: concourse@georgejose.com
       DEPLOY_SSH_KEY: {{deploy-ssh-key}}
 
 - name: deploy-haproxy
@@ -93,7 +93,7 @@ jobs:
       DOCKER_HUB_USERNAME: {{docker-hub-username}}
       DOCKER_HUB_PASSWORD: {{docker-hub-password}}
       DOCKER_HUB_DEPLOY_TAG: georgejose/haproxy:latest
-      SSH_HOST: george@138.197.146.211
+      SSH_HOST: concourse@georgejose.com
       DEPLOY_SSH_KEY: {{deploy-ssh-key}}
 
 resources:
