--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,21 @@
-**/node_modules
-/dist
-/.tmp
-/.sass-cache
-/bower_components
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
 .DS_Store
-*.log
-haproxy/ssl
-haproxy/ssl_decrypted.zip
-jupyter/notebooks
-.vscode
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
