--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "personal-website": "profile-f532e"
+    "personal-website": "profile-f532e",
+    "default": "georgejose-2f171"
   }
 }
