--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ install:
   - npm install
 
 script:
-  - ls && cd wheres-my-ttc && npm run build
+  - ls && cd wheres-my-ttc && CI="" npm run build
   - mv build/* ../public/projects/livetransit/*
