--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,8 @@ script:
   - mv build/* ../public/projects/livetransit/
   - cd ..
 
-deploy:
+before_deploy:
+  - npm install -g firebase-tools
+
+after_success:
   - firebase deploy
