--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,5 @@ script:
 
 after_success:
   - npm install -g firebase-tools
-  - firebase use alias georgejose-2f171
+  - firebase use georgejose-2f171
   - firebase deploy
